<resources>
    <string name="app_name">RickyMorty</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>

    <string name="name">name</string>
    <string name="species">species</string>
    <string name="status">status</string>
    <string name="gender">gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>