<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_remove"
        android:layout_width="60dp"
        android:layout_height="6dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_sheet_remove_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="Filter"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_remove" />

    <TextView
        android:id="@+id/tv_filter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/filter_text_border"
        android:fontFamily="@font/poppins_light"
        android:padding="8dp"
        android:text="@string/name"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_filter_species"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter" />

    <TextView
        android:id="@+id/tv_filter_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/filter_text_border"
        android:fontFamily="@font/poppins_light"
        android:padding="8dp"
        android:text="@string/species"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_filter_status"
        app:layout_constraintStart_toEndOf="@id/tv_filter_name"
        app:layout_constraintTop_toTopOf="@id/tv_filter_name" />

    <TextView
        android:id="@+id/tv_filter_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/filter_text_border"
        android:fontFamily="@font/poppins_light"

        android:padding="8dp"
        android:text="@string/status"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_filter_gender"
        app:layout_constraintStart_toEndOf="@id/tv_filter_species"
        app:layout_constraintTop_toTopOf="@id/tv_filter_name" />

    <TextView
        android:id="@+id/tv_filter_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/filter_text_border"
        android:fontFamily="@font/poppins_light"
        android:padding="8dp"
        android:text="@string/gender"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_filter_status"
        app:layout_constraintTop_toTopOf="@id/tv_filter_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="40dp"
        android:fontFamily="@font/poppins_light"
        android:padding="13dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:backgroundTint="@color/purple_200"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_name" />

</androidx.constraintlayout.widget.ConstraintLayout>